# preflop-storage

./: .brooks-lint-history.json  .gitignore  README.md  benchmark_analysis.md  eslint.config.js  package.json
.claude/: settings.local.json
.husky/: pre-commit
docs/: deploy-and-rollback.md  error-handling-strategy.md  float32-precision-spec.md  issues-and-action-items.md  native-addon-build.md  query-sdk.md  requirements-status-and-plan.md
native-addon/: Cargo.toml  index.d.ts  index.js  package.json
native-addon/src/: bin_reader.rs  crc32c.rs  idx_reader.rs  lib.rs  pack_codec.rs  types.rs
reports/: benchmark-binary.json  benchmark-binary.md  benchmark-report.json  benchmark-report.md  benchmark-scheme1.json  benchmark-scheme1.md  benchmark-scheme2-abstract-local.json  benchmark-scheme2-abstract-local.md  benchmark-scheme2-no-prewarm.json  benchmark-scheme2-no-prewarm.md  benchmark-scheme2-random.json  benchmark-scheme2-random.md  benchmark-scheme2.json  benchmark-scheme2.md  benchmark-sqlite.json  benchmark-sqlite.md  binary-analysis.json  scheme2-evaluation.md  sqlite-analysis.json  sqlite-analysis.md  sqlite-vs-rust-comparison.md  storage-analysis.md  verify-full-default-9max-300BB.json  verify-full-default-9max-300BB.md  verify-full.json  verify-full.md  verify-sample.json  verify-sample.md
scripts/: build-native.ts  release-notices.ts
src/: index.ts
tests/: benchmark-output.test.ts  binary-codec.test.ts  cli-args.test.ts  cli-command-router.test.ts  cold-start-benchmark.test.ts  float32-precision.test.ts  idx-format-constants.test.ts  test-cases.md  (+16 more)
(+140 files in other folders)
